test/test-deployment.yaml
# NodePort is for exposing to external traffic
apiVersion: v1
kind: Service
metadata:
  name: test-node-port-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30050
  selector:
    app: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        resources:
          requests:
            memory: "250000000"
            cpu: "0.1"
          limits:
            memory: "500000000"
            cpu: "5"
